fix: progress bar too wide in narrow viewports

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
 }
 
 .progress-bar-container {
-  width: 100%;
+  width: 90%;
   height: 42px;
   box-shadow: 0 0 0 2px var(--text-color);
   border: 2px solid var(--bg-color);
@@ -45,12 +45,6 @@ body {
 
 #progress-bar {
   height: 100%;
-  width: 0;
+  width: 0; /* gets updated via JS */
   background-color: var(--text-color);
-}
-
-@media (min-width: 480px) {
-  .progress-bar-container {
-    width: 80%;
-  }
 }
